--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>GitHub User Search</title>
 </head>
 <body>
-    <div id="app"></div>
+   <div id="app"></div> -->
+    <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
